fix docker